--- a/main.html
+++ b/main.html
@@ -8,6 +8,54 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<table border= "solid">
+		<tr> <thead>
+		<th>Roll numbers</th>
+		<th>Names</th>
+		</thead> </tr>
+		<tr> <tbody>
+			<td>1</td>
+			<td>TR</td>
+		</tr>
+		<tr>
+			<td>10</td>
+			<td>HE</td>
+		</tr>
+		<tr>
+			<td>30</td>
+			<td>KE</td>
+		</tbody></tr>
+	</table>
+<h1>List of medias</h1>
+	<ol>
+		<li><a href = "https://picsum.photos/id/123/200/300" alt = "First item">Image </a></li>
+		<li>
+			<video width="320" height="240" controls>
+			<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4">
+		</video>			
+		</li>
+		<li> 
+		<audio controls>
+  
+  <source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/mpeg">
+  
+</audio>
+			
+		</li>		
+
+
+		
+	</ol>
+
+
+
+
+
+
+
+
+
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
