--- a/main.html
+++ b/main.html
@@ -28,31 +28,23 @@
 	</table>
 <h1>List of medias</h1>
 	<ol>
-		<li><a href = "https://picsum.photos/id/123/200/300" alt = "First item">Image </a></li>
+		<li><a href = "https://picsum.photos/id/123/200/300" alt = "First item">First Item </a></li>
 		<li>
-			<video width="320" height="240" controls>
-			<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4">
-		</video>			
+			<video width="320" height="240" controls src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4">
+		
+			
+			</video>			
 		</li>
 		<li> 
-		<audio controls>
-  
-  <source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/mpeg">
-  
-</audio>
+		<audio controls src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/mpeg">
+		
+
+		
+		</audio>
 			
 		</li>		
 
-
-		
 	</ol>
-
-
-
-
-
-
-
 
 
 	
