--- a/main.html
+++ b/main.html
@@ -21,31 +21,24 @@
 			<td>10</td>
 			<td>HE</td>
 		</tr>
-		<tr>
-			<td>30</td>
-			<td>KE</td>
-		</tbody></tr>
+			
+		</tbody>
 	</table>
 <h1>List of medias</h1>
 	<ol>
-		<li><a href = "https://picsum.photos/id/123/200/300" alt = "First item">First Item </a></li>
-		<li>
-			<video width="320" height="240" controls src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4">
-		
-			
-			</video>			
-		</li>
 		<li> 
-		<audio controls src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/mpeg">
-		
+			<a href = "https://picsum.photos/id/123/200/300" alt = "Image">Image </a> 
+		</li>
+<li>
+
+
+	
+</li> 
+
 
 		
-		</audio>
-			
-		</li>		
-
 	</ol>
-
+		
 
 	
     <script type="text/javascript" src="./script.js">
