--- a/main.html
+++ b/main.html
@@ -30,10 +30,18 @@
 			<a href = "https://picsum.photos/id/123/200/300" alt = "Image">Image </a> 
 		</li>
 <li>
-
-
-	
+		<video width="320" height="240" autoplay muted>
+		<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/ogg">
+</video>
 </li> 
+
+		<li>
+	<audio controls>
+	  <source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/mpeg">
+  
+</audio>
+			
+		</li>
 
 
 		
