--- a/main.html
+++ b/main.html
@@ -9,18 +9,21 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<table border= "solid">
-		<tr> <thead>
-		<th>Roll numbers</th>
-		<th>Names</th>
-		</thead> </tr>
-		<tr> <tbody>
+		<thead>
+		<tr> 
+					<th>Roll numbers</th>
+					<th>Names</th>
+		</tr>
+			</thead>
+<tbody> 
+	<tr>
 			<td>1</td>
 			<td>TR</td>
-		</tr>
-		<tr>
+	</tr>
+	<tr>
 			<td>10</td>
 			<td>HE</td>
-		</tr>
+	</tr>
 	</tbody>
 	</table>
 <h1>List of medias</h1>
