--- a/main.html
+++ b/main.html
@@ -29,7 +29,7 @@
 <h1>List of medias</h1>
 	<ol>
 		<li> 
-			<a href = "https://picsum.photos/id/123/200/300" alt = "Image">Image </a> 
+			<img src = "https://picsum.photos/id/123/200/300" alt = "Image"></a> 
 		</li>
 <li>
 		<video width="320" height="240" autoplay muted>
@@ -38,8 +38,7 @@
 </li> 
 
 		<li>
-	<audio controls>
-	  <source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/mpeg">
+	<audio source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/mpeg">
   
 </audio>
 			
