--- a/main.html
+++ b/main.html
@@ -24,6 +24,10 @@
 			<td>10</td>
 			<td>HE</td>
 	</tr>
+	<tr>
+			<td>ffds</td>
+			<td>dsafdasTR</td>
+	</tr>
 	</tbody>
 	</table>
 <h1>List of medias</h1>
@@ -34,11 +38,12 @@
 <li>
 		<video width="320" height="240" autoplay muted>
 		<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/ogg">
-</video>
+		</video>
 </li> 
 
 		<li>
-	<audio source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/mpeg">
+	<audio controls>
+	  <source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/mpeg">
   
 </audio>
 			
