--- a/main.html
+++ b/main.html
@@ -33,7 +33,7 @@
 <h1>List of medias</h1>
 	<ol>
 		<li> 
-			<img src = "https://picsum.photos/id/123/200/300" alt = "Image"></a> 
+				<img src = "https://picsum.photos/id/123/200/300" alt = "Image">
 		</li>
 <li>
 		<video width="320" height="240" autoplay muted>
