--- a/main.html
+++ b/main.html
@@ -38,6 +38,7 @@
 <li>
 		<video width="320" height="240" autoplay muted>
 		<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4">
+		<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/ogg">
 		</video>
 </li> 
 
