--- a/main.html
+++ b/main.html
@@ -33,20 +33,19 @@
 <h1>List of medias</h1>
 	<ol>
 		<li> 
-				<img src = "https://picsum.photos/id/123/200/300" alt = "Image">
+				<img src = "https://picsum.photos/id/123/200/300" alt = "image">
 		</li>
 <li>
-		<video width="320" height="240" autoplay muted>
+		<video width="320" height="240" controls>
 		<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4">
-		<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/ogg">
 		</video>
 </li> 
 
 		<li>
-		<audio controls>
-			<source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg">
-			<source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/mpeg">
-		</audio>
+				  <audio controls src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg">
+			      </audio>
+
+
 
 			
 		</li>
